infrastructure/controllers/ingress/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-whoami
labels:
  # Needed for otel instrumentation
  pod-security.kubernetes.io/enforce: privileged
