infrastructure/controllers/ingress/base/whoami.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: traefik
  labels:
    app.kubernetes.io/component: debug
    app.kubernetes.io/instance: whoami
    app.kubernetes.io/name: whoami
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: whoami
  template:
    metadata:
      labels:
        app.kubernetes.io/component: debug
        app.kubernetes.io/instance: whoami
        app.kubernetes.io/name: whoami
        k8s.mcathome.ch/allow-traefik-ingress: 'true'
    spec:
      securityContext:
        runAsUser: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: whoami
          image: traefik/whoami:latest
          ports:
            - containerPort: 8080
          args:
            - --port=8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: '0.02'
              memory: '4Mi'
            limits:
              cpu: '0.05'
              memory: '8Mi'
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: traefik
  labels:
    app.kubernetes.io/component: debug
    app.kubernetes.io/instance: whoami
    app.kubernetes.io/name: whoami
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: whoami
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 32080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: traefik
  labels:
    app.kubernetes.io/component: debug
    app.kubernetes.io/instance: whoami
    app.kubernetes.io/name: whoami
spec:
  ingressClassName: traefik
  rules:
  - host: ${whoamiHostName}
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/"
        backend:
          service:
            name: whoami
            port:
              number: 80
  tls: []
