infrastructure/controllers/ingress/base/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-traefik-to-services
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: traefik
      k8s:io.kubernetes.pod.namespace: traefik
  egress:
  - toEndpoints:
    - matchLabels:
        k8s.mcathome.ch/allow-traefik-ingress: 'true'
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-from-traefik
spec:
  endpointSelector:
    matchLabels:
      k8s.mcathome.ch/allow-traefik-ingress: 'true'
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/name: traefik
        k8s:io.kubernetes.pod.namespace: traefik
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-traefik-egress-and-ingress
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: traefik
      k8s:io.kubernetes.pod.namespace: traefik
  egress:
  - toFQDNs:
    - matchName: plugins.traefik.io
    toPorts:
    - ports:
      - port: '443'
  # Crowdsec
  - toCIDR:
    - ${proxyIP}/32
    toPorts:
    - ports:
      - port: '8080'
        protocol: TCP
      - port: '7422'
        protocol: TCP
      rules:
        http: [{}]
  ingress:
  - fromCIDR:
    - ${proxyIP}/32
    toPorts:
    - ports:
      - port: '8000'
        protocol: TCP
      - port: '8080'
        protocol: TCP
      rules:
        http: [{}]
    - ports:
      - port: '8443'
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-whoami-from-int
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: whoami
  ingress:
  - fromCIDR:
    - ${proxyIP}/24
    toPorts:
    - ports:
      - port: '8080'
        protocol: TCP
      rules:
        http: [{}]
